@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.4 2002-08-09 19:31:13 wilsonp Exp $
+$Id: ChangeLog,v 1.5 2002-08-12 04:51:38 wilsonp Exp $
 	
 Version 2.6.???
 	
@@ -9,6 +9,8 @@ NEW FEATURES
 
 
 CODE UPDATES
+	* Update for addition of software for producing collaboration 
+	  graphs in doxygen called 'dot'  [PW] (08/11/2002)
 	
 -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	
 
